# siegfried

./: Cargo.toml  README.MD  README.md
benches/: bitmath.rs
src/: bitboard.rs  display.rs  game.rs  lib.rs  magic.rs  main.rs  maps.rs  masks.rs  position.rs  tests.rs  tree.rs  types.rs
