[package]
name = "siegfried"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[env]
RUST_BACKTRACE=1
RUSTFLAGS="-C link-args=-Wl,-zstack-size=4194304"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.4"
bitintr = "0.3.0"
rand_pcg = "0.3.1"
serde_json = "1.0"
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bitmath"
harness = false

[profile.release]
opt-level = 3